--- a/indeProfe.html
+++ b/indeProfe.html
@@ -59,8 +59,11 @@
             <input type="email" name="email" placeholder="Tu correo electrónico" class="bg-white text-gray-700 rounded-l-xl p-3 w-1/3 ">
             <button type="submit" class="bg-yellow-500 rounded-r-xl px-3 hover:bg-yellow-600 hover:text-black cursor-pointer">Suscribirse</button>
         </form>
-    
     </section>
 
+    <footer class="text-center py-3 bg-gray-700 text-white">
+
+        <p>&copy 2023 Juego de Mesa. Todos los derechos reservados. </p>
+    </footer>
 </body>
 </html>
